MDEV-7919: main.explain_json* fail in buildbot with valgrind

Correctly initialize Explain_node::connection_type, remove unused
Explain_node constructor.